 - added processing of distributed events (Alexei)
 - restructured code to add function process_event() (Alexei)
 - table ALARMS renamed to EVENTS (Alexei)
 - added automatic generation of database schemas (Alexei)
 - pinger will use unique temporary file name (Alexei)
 - developed SLA calculation periods (Eugene)
 - developed flexible update intervals for items (Eugene)

Integrated from 1.1.x

 - fixed calculation of nodata() (Alexei)
 - fixed occasional LIBSQLORA8-30002: Memory allocation error. (Alexei)
 - fixed system.swap.in[] and system.swap.out[] under Linux 2.4 (Alexei)
 - fixed processing of SNMP HEX and OCTET string values (Alexei)
 - added Dutch tranlation (Alexei)
 - fixed reversed icons on maps (Eugene)
 - fixed trigger description substitution in action comporation (Eugene) 
 - fixed trigger description substitution in message subject and body (Eugene) 
 - added color selection for trigger severity 'warning' and 'information' (Eugene)
 - fixed limitation of return value for 'net.if.*' (Eugene)
 - fixed limitation of return value for 'vfs.dev.*' (Eugene)
 - fixed limitation of return value for 'system.cpu.intr' (Eugene)
 - fixed autoregistration in oracle system (Eugene)
 - fixed support of PostgreSQL (Eugene)
 - improved macro variables substitution in message body/subject (Eugene)
 - fixed order of displaying log files (Eugene)
 - added support of 'pfree' and 'pused' for 'vfs.fs.size' of windows (Eugene)
 - added '<=' comporator for trigger severity of action conditions (Eugene)
 - fixed problem with escape characters in triggers (Eugene)
 - fixed 'system.cpu.util[*]' for Tru64 (Eugene)
 - disabled exit code handling of UserParameter scripts (Eugene)
 - improved UserParameter substitution (Eugene)
 - improved definition of integer and float point types (Eugene)
 - fixed problem with ASN_IPADDRESS SNMP values (Eugene)
 - added action email action variable '{TRIGGER.SEVERITY}' (Eugene)