@@ -12,6 +12,7 @@ Changes for 1.3:
 
 Integrated from 1.1.x
 
+ - better processing of units 's', support for units 'uptime' (Alexei)
  - fixed calculation of nodata() (Alexei)
  - fixed occasional LIBSQLORA8-30002: Memory allocation error. (Alexei)
  - fixed system.swap.in[] and system.swap.out[] under Linux 2.4 (Alexei)
